# joplin2obsidian

./: README.md  main.py  pyproject.toml
joplin2obsidian/: exporter.py  parser.py  reader.py
