[tool.poetry]
name = "joplin2obsidian"
version = "0.1.0"
description = "Import markdown files from joplin to obsidian"
authors = ["githubfzq <u201312526@alumni.hust.edu.cn>"]

[tool.poetry.dependencies]
python = "^3.10"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
